First modif to dev-staging local repo

--- a/app/views/welcome/index.erb
+++ b/app/views/welcome/index.erb
@@ -1,4 +1,4 @@
-<h1>Getting Started with Ruby - Testing gogo Cowsay but this is for the remote a second time</h1>
+<h1>Getting Started with Ruby - Testing gogo Cowsay but this is for the remote a second time for the final dev phase !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</h1>
 
 <p>
   Welcome!
